Updated makefile. Added support for negative numbers

--- a/HW6/makefile
+++ b/HW6/makefile
@@ -1,3 +1,6 @@
 all: 
-	g++ -std=c++11 HWK6_waitejg.cpp lexer.cpp parser.cpp ArithmeticExpression.cpp 
+	g++ -o HWK6_waitejg -std=c++11 HWK6_waitejg.cpp lexer.cpp parser.cpp ArithmeticExpression.cpp 
+	@ echo "DONE! run './HWK6_waitejg' "
+clean: 
+	rm HWK6_waitejg
 
